Fix using Fragments with relative path. Fix spacing in term keys. Updated tests and it now includes relative path check. Fix error checking.

--- a/test/info.html
+++ b/test/info.html
@@ -5,4 +5,5 @@
     {type="fragment" src="idontexist.html"}
     <!-- Check if fragment inception catcher works. This should be: "I can't do that Dave." message. -->
     {type="fragment" src="info.html"}
+    {type="fragment" src="innerdir/innerfragment.html"}
 </div>
