Simplified Parse call to ParseLine (drop contains check). Switch to using {{ and }} instead of { } to resolve issues when checking against compressed JS. ParseLine will now check for {{ and }}, simply returning the entire line content if it does not find both.

--- a/test/innerdir/innerfragment.html
+++ b/test/innerdir/innerfragment.html
@@ -1,2 +1,2 @@
 <!-- This is just testing if we can get innerdirref.html from innerdir using relative URL -->
-{ type="fragment" src="innerdirref.html" }
+{{ type="fragment" src="innerdirref.html" }}
