--- a/test/page.html
+++ b/test/page.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <!-- This is a Fragment for Navigation. navigation.html contains Frala Term syntax -->
-        { type="fragment" src="info.html"}
+        {{ type="fragment" src="info.html"}}
     </body>
 </html>
