--- a/test/info.html
+++ b/test/info.html
@@ -1,9 +1,9 @@
 <div>
-    This is our message in English: {type="term" src="hello" lang="en"}, Josh!
-    This is our message in Finnish: {type="term" src="hello" lang="fi"}, Josh!
+    This is our message in English: {{type="term" src="hello" lang="en"}}, Josh!
+    This is our message in Finnish: {{type="term" src="hello" lang="fi"}}, Josh!
     <!-- Intentional import of non-existant file -->
-    {type="fragment" src="idontexist.html"}
+    {{type="fragment" src="idontexist.html"}}
     <!-- Check if fragment inception catcher works. This should be: "I can't do that Dave." message. -->
-    {type="fragment" src="info.html"}
-    {type="fragment" src="innerdir/innerfragment.html"}
+    {{type="fragment" src="info.html"}}
+    {{type="fragment" src="innerdir/innerfragment.html"}}
 </div>
