--- a/test/info.html
+++ b/test/info.html
@@ -1,6 +1,10 @@
 <div>
     This is our message in English: {{type="term" src="hello" lang="en"}}, Josh!
     This is our message in Finnish: {{type="term" src="hello" lang="fi"}}, Josh!
+
+    DefaultLanguage (Built-in): {{ type="term" src="frala.DefaultLanguage" }}
+    Direction (Built-in): {{ type="term" src="frala.Direction" }}
+
     <!-- Intentional import of non-existant file -->
     {{type="fragment" src="idontexist.html"}}
     <!-- Check if fragment inception catcher works. This should be: "I can't do that Dave." message. -->
