Add Languages as a new built-in. Returns the joined string of Languages defined in Config or the DefaultLanguage if no Languages are defined.

--- a/test/info.html
+++ b/test/info.html
@@ -4,6 +4,7 @@
 
     DefaultLanguage (Built-in): {{ type="term" src="frala.DefaultLanguage" }}
     Direction (Built-in): {{ type="term" src="frala.Direction" }}
+    Languages (Built-in): {{ type="term" src="frala.Languages" }}
 
     <!-- Intentional import of non-existant file -->
     {{type="fragment" src="idontexist.html"}}
